--- a/AutoPartsStore.Services/AutoPartsStore.Services.csproj
+++ b/AutoPartsStore.Services/AutoPartsStore.Services.csproj
@@ -11,7 +11,13 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="5.0.5" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutoPartsStor.Domain\AutoPartsStore.Domain.csproj" />
+    <ProjectReference Include="..\AutoPartsStore.Persistence\AutoPartsStore.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
